# bss-handson

./: .gitignore  AGENTS.md  LICENSE.md  README.md  instruction.md  pyproject.toml
configs/: bss.yaml  bss_model_gauss.yaml  bss_model_laplace.yaml  bss_niter_10.yaml  bss_niter_100.yaml  bss_niter_50.yaml  bss_refmic_0.yaml  bss_refmic_1.yaml  bss_update_ip.yaml  bss_update_iss.yaml
docs/: fast-numpy.md  instruction.md
docs/img/: SPECIFICATION.md
scripts/: create_bss_comparison_configs.py  evaluate_random_bss.py  plot_bss_metrics.py  plot_bss_niter_metrics.py  run_bss.py  show_bss_metrics.py
scripts/steps/: step00_main.py  step01_main.py  step02_main.py  step03_main.py  step04_main.py  step05_main.py  step06_main.py  step07_main.py  step08_main.py  step09_main.py  step10_main.py
src/bss_handson/: __init__.py  auxiva.py  cli.py  config.py  data.py  evaluation.py  io.py  pipeline.py  plot.py  plot_style.py  simulation.py  stft.py
styles/: common.mplstyle  paper.mplstyle  slide.mplstyle
